about updates and fix icons on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -51,6 +51,10 @@ footer > a:hover {
     border: none
 }
 
+footer > a:first-child {
+    margin-left: 0px;
+}
+
 main {
     line-height: 24px;
 }
